--- a/styles.scss
+++ b/styles.scss
@@ -1,4 +1,5 @@
 @import '~semantic-ui-css/semantic.css';
+@import '~react-day-picker/lib/style.css';
 
 .pagina-simple {
   display: flex!important;
